--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Register Your Child</h1>
+    <h1>Register Your Child</h1>  
     <nav>
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
@@ -21,33 +21,92 @@
   <main>
     <h2>Registration Form</h2>
     <form action="#" method="post">
-      <label for="parentName">Parent's Full Name:</label>
-      <input type="text" id="parentName" name="parentName" required>
 
-      <label for="childName">Child's Full Name:</label>
-      <input type="text" id="childName" name="childName" required>
+      <!-- Child Information -->
+      <fieldset>
+        <legend>Child Information</legend>
+        <label for="childSurname">Surname:</label>
+        <input type="text" id="childSurname" name="childSurname" required>
 
-      <label for="dob">Child's Date of Birth:</label>
-      <input type="date" id="dob" name="dob" required>
+        <label for="childFullName">Full Names:</label>
+        <input type="text" id="childFullName" name="childFullName" required>
 
-     <label for="class">Select Class:</label>
-     <select id="class" name="class" required>
-      <option value="">-- Please choose --</option>
-      <option value="baby">🐞 Baby Class (Ladybug) – 0 to 2 Years</option>
-      <option value="toddler">🦋 Toddler Class (Butterfly) – 2 to 3 Years</option>
-      <option value="elephant">🐘 Elephant Class – 3 to 5 Years</option>
-     </select>
+        <label for="knownAs">Known As:</label>
+        <input type="text" id="knownAs" name="knownAs">
 
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" name="dob" required>
 
-      <label for="contact">Parent's Phone Number:</label>
-      <input type="tel" id="contact" name="contact" required>
+        <label for="gender">Gender:</label>
+        <select id="gender" name="gender" required>
+          <option value="">-- Please choose --</option>
+          <option value="female">Female</option>
+          <option value="male">Male</option>
+          <option value="other">Other</option>
+        </select>
 
-      <label for="email">Parent's Email Address:</label>
-      <input type="email" id="email" name="email">
+        <label for="address">Residential Address:</label>
+        <textarea id="address" name="address" rows="3" required></textarea>
 
+        <!-- Class Selection -->
+        <label for="class">Select Class:</label>
+        <select id="class" name="class" required>
+          <option value="">-- Please choose --</option>
+          <option value="baby">🐞 Baby Class (Ladybug) – 0 to 2 Years</option>
+          <option value="toddler">🦋 Toddler Class (Butterfly) – 2 to 3 Years</option>
+          <option value="elephant">🐘 Elephant Class – 3 to 5 Years</option>
+        </select>
+      </fieldset>
+
+      <!-- Mother's Information -->
+      <fieldset>
+        <legend>Mother's Information</legend>
+        <label for="motherSurname">Surname:</label>
+        <input type="text" id="motherSurname" name="motherSurname" required>
+
+        <label for="motherFullName">Full Names:</label>
+        <input type="text" id="motherFullName" name="motherFullName" required>
+
+        <label for="motherEmployer">Employer:</label>
+        <input type="text" id="motherEmployer" name="motherEmployer">
+
+        <label for="motherOccupation">Occupation:</label>
+        <input type="text" id="motherOccupation" name="motherOccupation">
+
+        <label for="motherCellphone">Cellphone:</label>
+        <input type="tel" id="motherCellphone" name="motherCellphone" required>
+
+        <label for="motherWorkPhone">Work Phone:</label>
+        <input type="tel" id="motherWorkPhone" name="motherWorkPhone">
+      </fieldset>
+
+      <!-- Father's Information -->
+      <fieldset>
+        <legend>Father's Information</legend>
+        <label for="fatherSurname">Surname:</label>
+        <input type="text" id="fatherSurname" name="fatherSurname" required>
+
+        <label for="fatherFullName">Full Names:</label>
+        <input type="text" id="fatherFullName" name="fatherFullName" required>
+
+        <label for="fatherEmployer">Employer:</label>
+        <input type="text" id="fatherEmployer" name="fatherEmployer">
+
+        <label for="fatherOccupation">Occupation:</label>
+        <input type="text" id="fatherOccupation" name="fatherOccupation">
+
+        <label for="fatherCellphone">Cellphone:</label>
+        <input type="tel" id="fatherCellphone" name="fatherCellphone" required>
+
+        <label for="fatherWorkPhone">Work Phone:</label>
+        <input type="tel" id="fatherWorkPhone" name="fatherWorkPhone">
+      </fieldset>
+
+      <!-- Notes -->
       <label for="message">Additional Notes (Optional):</label>
       <textarea id="message" name="message" rows="4" placeholder="Allergies, special needs, etc."></textarea>
 
+      <!-- Submit -->
       <button type="submit">Submit Registration</button>
     </form>
   </main>
