--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     
     <p><strong>Mbali Sila</strong><br>
     Phone: 081 775 9237<br>
-    Email: oxfordkiddies@gmail.com</p>
+    Email: oxfordkiddiesacademy1@gmail.com</p>
 
     <p><strong>Gugu Kakou</strong><br>
     Phone: 073 431 3164<br>
@@ -34,4 +34,5 @@
   </footer>
 </body>
 </html>
+
 
