--- a/register.html
+++ b/register.html
@@ -2,8 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register | Oxford Kiddies Academy</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 15px 0;
+      text-align: center;
+    }
+
+    header nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 20px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 25px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    fieldset {
+      border: 2px solid #4CAF50;
+      border-radius: 10px;
+      padding: 20px;
+    }
+
+    legend {
+      font-weight: bold;
+      color: #4CAF50;
+      font-size: 1.2em;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="date"],
+    select,
+    textarea,
+    input[type="file"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 12px;
+      font-size: 1em;
+      box-sizing: border-box;
+    }
+
+    textarea {
+      resize: vertical;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 14px;
+      border-radius: 6px;
+      font-size: 1.1em;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px 0;
+      background-color: #333;
+      color: white;
+      margin-top: 25px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -21,12 +127,10 @@
   <main>
     <h2>Registration Form</h2>
 
-    <!-- NOTE: enctype is necessary for file uploads -->
     <form id="registrationForm" action="https://formspree.io/f/mwpnaybb" method="POST" enctype="multipart/form-data">
-
       <input type="hidden" name="_subject" value="New Registration Submission">
 
-      <!-- Parent email (important so Formspree can send confirmations) -->
+      <!-- Parent email -->
       <label for="parentEmail">Parent's Email Address:</label>
       <input type="email" id="parentEmail" name="email" required>
 
@@ -112,7 +216,6 @@
       <!-- Uploads -->
       <fieldset>
         <legend>Uploads</legend>
-
         <label for="childPicture">Upload Child’s Picture (jpg/png/pdf):</label>
         <input type="file" id="childPicture" name="childPicture" accept=".jpg,.jpeg,.png,.pdf" required>
 
@@ -126,6 +229,7 @@
         <input type="file" id="proofResidence" name="proofResidence" accept=".jpg,.jpeg,.png,.pdf" required>
       </fieldset>
 
+      <!-- Additional Notes -->
       <label for="message">Additional Notes (Optional):</label>
       <textarea id="message" name="message" rows="4" placeholder="Allergies, special needs, etc."></textarea>
 
@@ -137,11 +241,10 @@
     <p>&copy; 2025 Oxford Kiddies Academy</p>
   </footer>
 
-  <!-- JS: send form using Fetch (keeps user on page and handles files) -->
   <script>
     const form = document.getElementById('registrationForm');
     form.addEventListener('submit', async function (e) {
-      e.preventDefault(); // prevent normal submit
+      e.preventDefault();
       const submitBtn = form.querySelector('button[type="submit"]');
       submitBtn.disabled = true;
       submitBtn.textContent = 'Sending...';
@@ -149,8 +252,7 @@
       try {
         const response = await fetch(form.action, {
           method: 'POST',
-          body: new FormData(form) // includes files automatically
-          // IMPORTANT: do NOT set 'Content-Type' header — the browser sets multipart/form-data boundary
+          body: new FormData(form)
         });
 
         if (response.ok) {
@@ -158,7 +260,6 @@
           form.reset();
         } else {
           alert('Submission failed. Please try again.');
-          console.error('Formspree response status:', response.status);
         }
       } catch (err) {
         alert('Network error. Please try again later.');
