--- a/register.html
+++ b/register.html
@@ -152,8 +152,9 @@
   <main>
     <h2>Registration Form</h2>
 
-    <form id="registrationForm" action="https://formspree.io/f/mwpnaybb" method="POST" enctype="multipart/form-data">
-      <input type="hidden" name="_subject" value="New Registration Submission">
+    <!-- ✅ Netlify Form Setup -->
+    <form name="registration" method="POST" data-netlify="true" enctype="multipart/form-data">
+      <input type="hidden" name="form-name" value="registration">
 
       <!-- Parent email -->
       <label for="parentEmail">Parent's Email Address:</label>
@@ -294,36 +295,6 @@
         const fileName = e.target.files.length ? e.target.files[0].name : "No file chosen";
         e.target.nextElementSibling.textContent = fileName;
       });
-    });
-
-    // Form submission
-    const form = document.getElementById('registrationForm');
-    form.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const submitBtn = form.querySelector('button[type="submit"]');
-      submitBtn.disabled = true;
-      submitBtn.textContent = 'Sending...';
-
-      try {
-        const response = await fetch(form.action, {
-          method: 'POST',
-          body: new FormData(form)
-        });
-
-        if (response.ok) {
-          alert('Thank you! Your registration has been submitted.');
-          form.reset();
-          document.querySelectorAll('.file-name').forEach(span => span.textContent = "No file chosen");
-        } else {
-          alert('Submission failed. Please try again.');
-        }
-      } catch (err) {
-        alert('Network error. Please try again later.');
-        console.error(err);
-      } finally {
-        submitBtn.disabled = false;
-        submitBtn.textContent = 'Submit Registration';
-      }
     });
   </script>
 </body>
